Add comment about using YCM instead of shipping YCM files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,10 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 # - AddInstallRPATHSupport
 # from YCM. Files are under the cmake subdirectory.
 # See https://github.com/robotology/ycm/
+# If you don't want to ship these files with your code (recommended), you can
+# instead depend on YCM.
+# In this case replace the following line with
+# find_package(YCM 0.8.1 REQUIRED)
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
 ### Options
