Create matching alias with namespace for the library

--- a/src/ExeExample/CMakeLists.txt
+++ b/src/ExeExample/CMakeLists.txt
@@ -6,6 +6,6 @@ set(${EXE_TARGET_NAME}_SRC
 
 add_executable(${EXE_TARGET_NAME} ${${EXE_TARGET_NAME}_SRC})
 
-target_link_libraries(${EXE_TARGET_NAME} LibTemplateCMake)
+target_link_libraries(${EXE_TARGET_NAME} LibTemplateCMake::LibTemplateCMake)
 
 install(TARGETS ${EXE_TARGET_NAME} DESTINATION bin)
