Add new executable using header-only library

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_subdirectory(LibTemplateCMake)
 add_subdirectory(LibHeaderOnlyTemplateCMake)
 add_subdirectory(ExeExample)
+add_subdirectory(ExeExampleHeaderOnly)
