Change PATH with DIRECTORY in doxygen CMakeLists

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -1,8 +1,7 @@
 # Provide a local project and cmake_minimum_required calls
 # to permit to generate the documentation without configuring
 # the complete project
-
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.5)
 
 # This variable should contain the argument of the project call in the main CMakeLists.txt
 set(ORIGINAL_PROJECT_NAME "LibTemplateCMake")
@@ -16,9 +15,9 @@ if(DOXYGEN_FOUND)
   # This variables are used inside the Doxyfile.in template
   set(DOXYGEN_BUILD_DIR "${CMAKE_CURRENT_BINARY_DIR}" CACHE STRING "Build directory for Doxygen html output (absolute).")
   set(DOXYGEN_INSTALL_DIR "${CMAKE_INSTALL_DATAROOTDIR}/doc/${ORIGINAL_PROJECT_NAME}" CACHE STRING "Installation directory for Doxygen html output (relative to CMAKE_INSTALL_PREFIX).")
-  get_filename_component(ORIGINAL_PROJECT_DIR "${CMAKE_CURRENT_SOURCE_DIR}" PATH)
-  set(DOXYGEN_SOURCE_DIR "${ORIGINAL_PROJECT_DIR}/src")
-  set(DOXYGEN_DOC_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
+    get_filename_component(ORIGINAL_PROJECT_DIR "${CMAKE_CURRENT_SOURCE_DIR}" DIRECTORY)
+    set(DOXYGEN_SOURCE_DIR "${ORIGINAL_PROJECT_DIR}/src")
+    set(DOXYGEN_DOC_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
 
 
   # Generate the doxygen configuration file used by the
